<resources>
    <string name="app_name">home</string>
    <string name="logo">logo</string>
    <string name="cutting_edge_vision_based_safety_systems_for_motorcycles">Cutting edge vision based safety systems for motorcycles</string>
    <string name="take_control_of_your_safety_seamlessly">Take control of your safety seamlessly.</string>
    <string name="create_an_account">Create an account</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign in</string>
    <string name="sign_up">Sign Up</string>
    <string name="lets_start_with_creating_an_account_so_that_you_can_configure_your_jetson_device">Lets start with creating an account so that you can configure your jetson device</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="your_password_must_be_8_or_more_characters_long_contain_a_mix_of_upper_lower_case_letters_numbers_and_symbols">Your password must be 8 or more characters long,contain a mix of upper, lower case letters, numbers and symbols.</string>
    <string name="by_signing_up_you_agree_to_our">By signing up you agree to our</string>
    <string name="terms_of_use_and_privacy_policy">Terms of Use and Privacy Policy</string>
    <string name="login">Login</string>
    <string name="sign_in_to_your_account">Sign in to your account</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="verification">Verification</string>
    <string name="enter_the_verification_code">Enter the verification code</string>
    <string name="johndoe_mail_com">johndoe@mail.com</string>
    <string name="_6_digits_code">6 digits code</string>
    <string name="verify_account">Verify Account</string>
    <string name="resend_code_in_60_seconds">Resend code in (60 seconds)</string>
    <string name="welcome_back_aegis_rider">Welcome Back! Aegis Rider</string>
    <string name="forgotten_password">Forgotten Password</string>
    <string name="please_enter_the_email_associated_to_your_account">Please enter the email associated to your account</string>
    <string name="Continue">Continue</string>
    <string name="recovery_code">Recovery Code</string>
    <string name="enter_the_recovery_code_we_sent_to">Enter the recovery code we sent to</string>
    <string name="recover_account">Recover Account</string>
    <string name="reset_password">Reset Password</string>
    <string name="create_your_new_password">Create your new password</string>
    <string name="notification_bell">notification bell</string>
    <string name="track_your_ride_with_push_notifications">Track your ride with push notifications</string>
    <string name="get_updates_when_your_motorbike_arrives_at_its_destination_and_more">Get updates when your motorbike arrives at its destination and more.</string>
    <string name="location_access_image">location Access Image</string>
    <string name="set_your_destination_to_determine_the_shortest_path">Set your destination, to determine the shortest path</string>
    <string name="allow_aegis_rider_to_access_this_device_s_location_services_to_provide_navigation_and_route_planning">Allow Aegis Rider to access this device\'s location services to provide navigation and route planning.</string>
    <string name="bluetooth_access_image">Bluetooth Access Image</string>
    <string name="connect_your_jetson_pack_via_bluetooth_to_predict_the_safest_trajectory">Connect your Jetson pack via Bluetooth to predict the safest trajectory</string>
    <string name="in_order_to_predict_the_safest_trajectory_for_your_ride_you_need_to_allow_our_app_to_access_your_bluetooth_device">In order to predict the safest trajectory for your ride, you need to allow our app to access your Bluetooth device.</string>
</resources>