<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.user_authentication.RecoverCode">

    <TextView
        android:id="@+id/tvRPtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/recovery_code"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvRPDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/enter_the_recovery_code_we_sent_to"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <TextView
        android:id="@+id/tvRCSub"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/johndoe_mail_com"
        android:textColor="@color/aegis_green"
        android:textSize="15sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etSUEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="@string/email"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:hint="@string/_6_digits_code"
        android:inputType="text|number"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/text_hint" />

    <Button
        android:id="@+id/btnSU"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_green"
        android:text="@string/Continue"
        app:backgroundTint="@color/aegis_green" />

    <TextView
        android:id="@+id/tvRCRCode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        android:text="@string/resend_code_in_60_seconds"
        android:textColorHint="@color/text_hint"
        android:textStyle="bold" />

</LinearLayout>