<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_aegis"
    android:orientation="vertical"
    tools:context=".SignUp">

    <TextView
        android:id="@+id/tvSUtxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/sign_up"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvSUDesc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/lets_start_with_creating_an_account_so_that_you_can_configure_your_jetson_device"
        android:textColor="#FFFFFF"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/etSUEmail"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="@string/email"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/text_hint" />

    <EditText
        android:id="@+id/etSUPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="@string/password"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/text_hint" />

    <EditText
        android:id="@+id/etSUCPassword"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:autofillHints="@string/password"
        android:background="@drawable/rounded_button"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        android:textColorHint="@color/text_hint" />

    <TextView
        android:id="@+id/tvFP"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/your_password_must_be_8_or_more_characters_long_contain_a_mix_of_upper_lower_case_letters_numbers_and_symbols"
        android:textColorHint="@color/text_hint"
        android:textSize="12sp" />

    <Button
        android:id="@+id/btnSU"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/rounded_green"
        android:text="@string/create_an_account"
        app:backgroundTint="@color/aegis_green" />

    <TextView
        android:id="@+id/tvTC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginRight="16dp"
        android:text="@string/by_signing_up_you_agree_to_our"
        android:textColor="#FFFFFF"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tVTC2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/terms_of_use_and_privacy_policy"
        android:textColor="@color/aegis_green"
        android:textStyle="bold" />
</LinearLayout>